<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="2dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/labelThemes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/theme"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupThemes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelThemes"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDarkTheme"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:showMotionSpec="?attr/showMotionSpec" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLightTheme"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:showMotionSpec="?attr/showMotionSpec" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSystemTheme"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:showMotionSpec="?attr/showMotionSpec" />

        </com.google.android.material.chip.ChipGroup>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/labelLanguages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/languages"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupThemes" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelLanguages"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipKmLocale"
                android:text="@string/khmer"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2.KM"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:showMotionSpec="?attr/showMotionSpec" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEnLocale"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/English"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:showMotionSpec="?attr/showMotionSpec" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSystemLocale"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconVisible="true"
                app:showMotionSpec="?attr/showMotionSpec" />

        </com.google.android.material.chip.ChipGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>